(env
  (dev
      ;TODO FIX! remove all those -xxx
      (flags (:standard -w -6-32-37-69))
      ; with dev jsoo Animation.bc.js is =~3MB
      (js_of_ocaml
       ; copy from semgrep-pro/dune file
       (flags
        (
         :standard ; pretty and sourcemap
         --no-inline
         --debug-info
         --disable staticeval
         --disable share
         ; js_of_ocaml has a bug w/ shortvars after 5.5.2 so let's disable it
         --disable shortvar
         ; gives us better error messages
         --enable with-js-error))))
  (release
       (flags (:standard)))
  ; with release-js Animation.bc.js is =~120KB
  ; if you give a fake profile like dune build example_js --profile=foo
  ; you can get even lower with 90KB but maybe the options below are useful
  ; TODO: use --opt? in semgrep-pro we don't because it says it can break things
  (release-js
      (js_of_ocaml
       (flags
        (
         --disable shortvar
         --enable with-js-error))))

)
